# sysacad-microservices

./: README.md
ms-student/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  spike_test.js
ms-student/app/: admin.py  urls.py
ms-student/app/models/: __init__.py  document_type.py  student.py
ms-student/app/repositories/: __init__.py  document_type.py  student.py
ms-student/app/serializers/: __init__.py  document_type.py  student.py
ms-student/app/services/: __init__.py  document_type.py  student.py
ms-student/app/utils/: academic_client.py  exception_global.py
ms-student/app/views/: __init__.py  base_viewset.py  document_type.py  health.py  student.py
ms-student/config/: app_config.py  settings.py  urls.py  wsgi.py
ms-student/tests/models/: test_document_type.py  test_student.py
ms-student/tests/repositories/: test_document_type.py  test_student.py
ms-student/tests/serializers/: test_document_type.py  test_student.py
ms-student/tests/services/: test_document_type.py  test_student.py
ms-student/tests/views/: test_document_type.py  test_student.py
student_management/: pyproject.toml
student_management/app/: admin.py  urls.py
student_management/app/models/: __init__.py  document_type.py  student.py
student_management/app/repositories/: __init__.py  document_type.py
student_management/app/services/: __init__.py
student_management/app/views/: __init__.py  document_type.py
student_management/config/: settings.py  urls.py
